# AIDRIN

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AUTHORS.txt  Authors.txt  CITATION.cff  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  __init__.py  app.py  docker-compose.yml  dump.rdb  pyproject.toml  real_ethnicity.csv  requirements.txt  setup.py  start.sh  test_cache_expiration.py  test_user_cache.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  install_problem.md  question.md
.github/workflows/: auto-fix-lint.yml  build.yml  docs.yml  lint.yml  prettier.yml
aidrin/: __init__.py  _version.py  app.py  celery_app.py  docker-compose.yml  file_parser.py  file_readers.py  logging.py  logging_utils.py  main.py  make_celery.py  read_file.py  tasks.py
aidrin/custom_dr/: __init__.py  base_dr.py  hh.py
aidrin/file_handling/: file_parser.py
aidrin/structured_data_metrics/: FAIRness_datacite.py  FAIRness_dcat.py  add_noise.py  class_imbalance.py  duplicity.py  (+10 more)
datasets/: appendicitis_data.csv  german_credit_data.csv
metadata/: 1.json  2.json  3.json  4.json  5.json
noisy/: noisy_data.csv
structured_data_metrics/: FAIRness_datacite.py  FAIRness_dcat.py  add_noise.py  class_imbalance.py  compare_representation_rate.py  completeness.py  correlation_score.py  feature_relevance.py  outliers.py  privacy_measure.py  representation_rate.py  statistical_rate.py
templates/: homepage.html  medical_image.html  upload_file.html  upload_meta.html
unstructured_data_metrics/: chest_xray_image_readiness.py
(+50 files in other folders)
