[project]
name = "aidrin"
version = "0.1"
readme = "README.md"
description="A tool to evaluate the readiness of data for AI"
maintainers = [{name = "Kaveen Hiniduma", email = "hiniduma.1@osu.edu"},{name = "Suren Byna", email = "byna.1@osu.edu"}]
dependencies = [
    "flask",
    "matplotlib",
    "dython",
    "pandas",
    "shap",
    "h5py",
    "celery",
    "redis"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "aidrin"

[tool.coverage.run]
branch = true
source = ["aidrin"]
